ios encryption rules

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">strokeAppSp</string>
+    <string name="app_name">Cuidando a los Padres</string>
 </resources>
